--- a/styles/locationStyles.css
+++ b/styles/locationStyles.css
@@ -5,36 +5,91 @@
     padding: 0px;
     font-family: "poppins", "sans-serif";
     zoom: 100%;
+    overflow-y: hidden;
 }
 
-#Main-Container{
-    width: 100%;
-}
-
-#Navbar {
-    background-color: #98717F;
-    margin: auto;
-    padding: 25px 0;
-    padding-left: 25px;
+  body{
+    margin: 0;
+    padding: 0;
+  }
+  .navbar{
     display: flex;
-    align-items: center;
     justify-content: space-between;
-}
-#Navbar ul li{
+    align-items: center;
+  }
+  .title{
+    font-size: 1.5rem;
+    padding-left: 100px;
+    margin: .5rem;
+  }
+  .title a{
+    text-deblackion: none;
+    color: white;
+  }
+  .navbar-links ul{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    padding-right: 50px;
+    cursor: pointer;
+  }
+  .navbar-links li{
     list-style: none;
-    display: inline-block;
-    margin: 0 28px;
-    position: relative;
-}
+  }
+  .navbar-links li a{
+    text-deblackion: none;
+    color: white;
+    padding: 1rem;
+    display: block;
+  }
+  .navbar-links li:hover{
+    background-color: #a5003c;
+    border-bottom: 3px solid black;
+    transition: all .3s ease;
+  }
+  .toggle-button{
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+  }
+  .toggle-button .bar{
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+  }
+  @media(max-width: 800px){
+    .toggle-button{
+        display: flex;
+    }
+    .navbar-links{
+        display: none;
+        width: 100%;
+    }
+    .navbar{
+        flex-direction: column;
+        align-items:flex-start;
+    }
+    .navbar-links ul{
+        width: 100%;
+        flex-direction: column;
+    }
+    .navbar-links li{
+        text-align: center;
+    }
+    .navbar-links li a{
+        padding: .7rem 3rem;
+    }
+    .navbar-links.active{
+        display: flex;
+    }
+  }
 
-#Navbar ul li a{
-    color: black;
-    text-transform: uppercase;
-}
-#Navbar ul li :hover{
-   color: white;
-   transition: 0.6s;
-}
 
 body {
     background-color: #A17D8A;
@@ -50,7 +105,7 @@ body {
 .map {
     height: 75vh;
     width: 150vh;
-    position: absolute;
+    position: fixed;
 }
 
 h1 {
@@ -80,4 +135,52 @@ h1 {
 
 .flexbox > div {
     padding: 20px;
+}
+
+.pin1 {
+    height: 5%;
+    width: 1.5%;
+    position: fixed;
+    left: 25%;
+    bottom: 47%;
+}
+
+.pin2 {
+    height: 5%;
+    width: 1.5%;
+    position: fixed;
+    left: 31.5%;
+    bottom: 27%
+}
+
+.pin3 {
+    height: 5%;
+    width: 1.5%;
+    position: fixed;
+    left: 35%;
+    top: 35%;
+}
+
+.pin4 {
+    height: 5%;
+    width: 1.5%;
+    position: fixed;
+    left: 46.2%;
+    bottom: 16%;
+}
+
+.pin5 {
+    height: 5%;
+    width: 1.5%;
+    position: fixed;
+    right: 48%;
+    top: 46%;
+}
+
+.pin6 {
+    height: 5%;
+    width: 1.5%;
+    position: fixed;
+    right: 42%;
+    top: 36%;
 }
