--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -8,119 +8,77 @@
     background-color: #98717F;
     overflow-y: hidden;
   }
-  body{
-    margin: 0;
-    padding: 0;
-    background-image: url(../images/BackgroundPattern.png);
-    height: 100%;
-    width: 100%;
-  }
-  .navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .title{
-    font-size: 1.5rem;
-    padding-left: 100px;
-    margin: .5rem;
-  }
-  .title a{
-    text-decoration: none;
-    color: black;
-  }
-  .navbar-links ul{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    padding-right: 50px;
-    cursor: pointer;
-  }
-  .navbar-links li{
-    list-style: none;
-  }
-  .navbar-links li a{
-    text-decoration: none;
-    color: black;
-    padding: 1rem;
-    display: block;
-  }
-  .navbar-links li:hover{
-    background-color: #a5003c;
-    border-bottom: 3px solid black;
-    transition: all .3s ease;
-  }
-  .toggle-button{
-    position: absolute;
-    top: .75rem;
-    right: 1rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
-  }
-  .toggle-button .bar{
-    height: 3px;
-    width: 100%;
-    background-color: white;
-    border-radius: 10px;
-  }
-  @media(max-width: 800px){
-    .toggle-button{
-        display: flex;
-    }
-    .navbar-links{
-        display: none;
-        width: 100%;
-    }
-    .navbar{
-        flex-direction: column;
-        align-items:flex-start;
-    }
-    .navbar-links ul{
-        width: 100%;
-        flex-direction: column;
-    }
-    .navbar-links li{
-        text-align: center;
-    }
-    .navbar-links li a{
-        padding: .7rem 3rem;
-    }
-    .navbar-links.active{
-        display: flex;
-    }
-    .icon {
-      height: 200px;
-      width: 200px;
-      position: absolute;
-      top: 50%;
-      right: 15%;
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%);
-      text-align: justify;
-      background-color: #866873;
-      box-shadow: #4C3B41 18px 18px;
-      background-image: url(../images/logo.png);
-      background-position-x: -40px;
-      background-position-y: -50px;
-    }
-  }
-  img {
-    height: fit-content;
-    width: fit-content;
-  }
-  .aboutUs {
-    margin-left: 10%;
-    width: 30%;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    text-align: justify;
+body{
+  margin: 0;
+  padding: 0;
+  background-image: url(../images/BackgroundPattern.png);
+  height: 100%;
+  width: 100%;
 }
-
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.title{
+  font-size: 1.5rem;
+  padding-left: 100px;
+  margin: .5rem;
+}
+.title a{
+  text-decoration: none;
+  color: black;
+}
+.navbar-links ul{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  padding-right: 50px;
+  cursor: pointer;
+}
+.navbar-links li{
+  list-style: none;
+}
+.navbar-links li a{
+  text-decoration: none;
+  color: black;
+  padding: 1rem;
+  display: block;
+}
+.navbar-links li:hover{
+  background-color: #a5003c;
+  border-bottom: 3px solid black;
+  transition: all .3s ease;
+}
+.toggle-button{
+  position: absolute;
+  top: .75rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+.toggle-button .bar{
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+}
+img {
+  height: fit-content;
+  width: fit-content;
+}
+.aboutUs {
+  margin-left: 10%;
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  text-align: justify;
+}
 img {
   height: 100%;
   width: 100%;
@@ -133,6 +91,7 @@ img {
 .aboutUs > h4 {
     padding: 10px;
     font-weight: 300;
+    background-color: rgba(0,0,0,0);
 }
 
 .icon {
@@ -175,3 +134,69 @@ img {
     max-width: 100px;
     padding: 50px 0;
 }
+@media(max-width: 800px){
+  nav {
+    position: relative;
+    z-index: 1;
+  }
+  .name {
+    font-size: 15px;
+  }
+  .toggle-button{
+    display: flex;
+  }
+  .navbar-links{
+    display: none;
+    width: 100%;
+  }
+  .navbar{
+    flex-direction: column;
+    align-items:flex-start;
+  }
+  .navbar-links ul{
+    width: 100%;
+    flex-direction: column;
+  }
+  .navbar-links li{
+    text-align: center;
+  }
+  .navbar-links li a{
+    padding: .7rem 3rem;
+  }
+  .navbar-links.active{
+    display: flex;
+  }
+  .icon {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    top: 50%;
+    right: 15%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    text-align: justify;
+    background-color: #866873;
+    box-shadow: #4C3B41 10px 10px;
+    background-image: url(../images/logo.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position-x: 0px;
+    background-position-y: 0px;
+  }
+
+  .aboutUs > h1 {
+    padding: 10px;
+    background-color: rgba(0,0,0,0);
+    font-size: 20px;
+    z-index: 10;
+  }
+  .aboutUs > h4 {
+    padding: 10px;
+    font-weight: 300;
+    background-color: rgba(0,0,0,0);
+    font-size: 10px;
+  }
+}
+
+
+  
