--- a/styles/locationStyles.css
+++ b/styles/locationStyles.css
@@ -138,33 +138,34 @@ h1 {
 }
 
 .pin1 {
-    height: 5%;
-    width: 1.5%;
-    position: fixed;
-    left: 25%;
-    bottom: 47%;
+    height: 10%;
+    width: 6%;
+    position: relative;
+    right: 190%;
+    bottom: 70%;
+    
 }
 
 .pin2 {
-    height: 5%;
-    width: 1.5%;
-    position: fixed;
-    left: 31.5%;
-    bottom: 27%
+    height: 10%;
+    width: 6%;
+    position: relative;
+    right: 173%;
+    bottom: 35%;
 }
 
 .pin3 {
-    height: 5%;
-    width: 1.5%;
-    position: fixed;
-    left: 35%;
-    top: 35%;
+    height: 10%;
+    width: 6%;
+    position: relative;
+    right: 166%;
+    bottom: 105%;
 }
 
 .pin4 {
     height: 5%;
     width: 1.5%;
-    position: fixed;
+    position: relative;
     left: 46.2%;
     bottom: 16%;
 }
@@ -172,7 +173,7 @@ h1 {
 .pin5 {
     height: 5%;
     width: 1.5%;
-    position: fixed;
+    position: relative;
     right: 48%;
     top: 46%;
 }
@@ -180,7 +181,5 @@ h1 {
 .pin6 {
     height: 5%;
     width: 1.5%;
-    position: fixed;
-    right: 42%;
-    top: 36%;
+    position: relative;
 }
