--- a/styles/topsStyles.css
+++ b/styles/topsStyles.css
@@ -131,19 +131,17 @@
     background-color: rgba(255, 255, 255, 0.0);
     padding-left: 20px;
     position: relative;
-    top: 45%;
+    margin-top: 90%;
 }
 
 .clothesprice {
-    margin-top: 50px;
-    margin-right: 50px;
+    margin-top: 30px;
     color: black;
     width: 15vw;
     background-color: rgba(255, 255, 255, 0.4);
     padding-left: 10px;
     position: relative;
-    top: 45%;
-    left: 50%;
+    margin-left: 50%; 
 }
 
 .clothes1:hover {
