--- a/styles/clothestyles.css
+++ b/styles/clothestyles.css
@@ -8,6 +8,7 @@
     font-family: "Poppins","sans-serif";
     background-color: #98717F;
     font-family: "poppins",sans-serif;
+    overflow-x: hidden;
   }
   body{
     margin: 0;
@@ -64,32 +65,6 @@
     background-color: white;
     border-radius: 10px;
   }
-  @media(max-width: 800px){
-    .toggle-button{
-        display: flex;
-    }
-    .navbar-links{
-        display: none;
-        width: 100%;
-    }
-    .navbar{
-        flex-direction: column;
-        align-items:flex-start;
-    }
-    .navbar-links ul{
-        width: 100%;
-        flex-direction: column;
-    }
-    .navbar-links li{
-        text-align: center;
-    }
-    .navbar-links li a{
-        padding: .7rem 3rem;
-    }
-    .navbar-links.active{
-        display: flex;
-    }
-  }
 
 .category {
   background-image: url("../images/menfashion2.webp");
@@ -103,12 +78,12 @@
 
 .categorytxt {
   font-size: 50px;
-  position: absolute;
+  position: relative;
   color: white;
   text-shadow: 0px 0px 20px black;
   background-color: rgba(0, 0, 0, 0);
-  padding: 0px;
-  left: 42%;
+  margin-top: 50px;
+  text-align: center;
   top: 25%;
 }
 
@@ -122,20 +97,23 @@
   margin-bottom: 50px;
   background-image: url(../images/Tops.jpg);
   background-size: 90%;
-  background-position-y: -250px;
+  background-position-y: -330px;
   height: 40vh;
   width: 30vw;
   background-repeat: no-repeat;
   opacity: 80%;
   transition:  0.6s;
+  width: 40vw;
 }
 
 .topstxt {
   background-color: rgba(0, 0, 0, 0);
   color: #ffffff;
   position: relative;
-  left: 35%;
-  top: 40%;
+  text-align: center;
+  padding-right: 10%;
+  -ms-transform: translateY(260%);
+  transform: translateY(260%);
   text-shadow: 0px 0px 20px black;
 }
 
@@ -149,19 +127,22 @@
   margin-bottom: 50px;
   background-image: url(../images/bottoms.jpg);
   background-size: 100%;
+  background-position-y: 20%;
   height: 40vh;
-  width: 30vw;
+  width: 40vw;
   background-repeat: no-repeat;
   opacity: 80%;
   transition:  0.6s;
 }
 
 .bottomstxt {
-  background-color: rgba(0, 0, 0, 0);
+   background-color: rgba(0, 0, 0, 0);
   color: #ffffff;
   position: relative;
-  left: 35%;
-  top: 40%;
+  text-align: center;
+  padding-right: 10%;
+  -ms-transform: translateY(260%);
+  transform: translateY(260%);
   text-shadow: 0px 0px 20px black;
 }
 
@@ -170,6 +151,60 @@
   transition: 0.6s;
 }
 
+@media(max-width: 800px){
+  .toggle-button{
+      display: flex;
+  }
+  .navbar-links{
+      display: none;
+      width: 100%;
+  }
+  .navbar{
+      flex-direction: column;
+      align-items:flex-start;
+  }
+  .navbar-links ul{
+      width: 100%;
+      flex-direction: column;
+  }
+  .navbar-links li{
+      text-align: center;
+  }
+  .navbar-links li a{
+      padding: .7rem 3rem;
+  }
+  .navbar-links.active{
+      display: flex;
+  }
+  .tops {
+    height: 45vh;
+    background-image: url(../images/Tops.jpg);
+    background-size: 150%;
+    background-position-x: -90px;
+  }
+  .topstxt {
+    background-color: rgba(0, 0, 0, 0);
+    color: #ffffff;
+    left: 5%;
+    -ms-transform: translateY(125%);
+    transform: translateY(125%);
+    text-shadow: 0px 0px 20px black;
+  }
+  .bottoms {
+    height: 45vh;
+    background-image: url(../images/bottoms.jpg);
+    background-size: 100%;
+    background-position-y: -30px;
+  }
+  .bottomstxt {
+    background-color: rgba(0, 0, 0, 0);
+    color: #ffffff;
+    left: 5%;
+    -ms-transform: translateY(125%);
+    transform: translateY(125%);
+    text-shadow: 0px 0px 20px black;
+  } 
+}
 
 
 
