--- a/styles/locationStyles.css
+++ b/styles/locationStyles.css
@@ -23,8 +23,8 @@
     margin: .5rem;
   }
   .title a{
-    text-deblackion: none;
-    color: white;
+    text-decoration: none;
+    color: black;
   }
   .navbar-links ul{
     margin: 0;
@@ -37,8 +37,8 @@
     list-style: none;
   }
   .navbar-links li a{
-    text-deblackion: none;
-    color: white;
+    text-decoration: none;
+    color: black;
     padding: 1rem;
     display: block;
   }
@@ -138,48 +138,49 @@ h1 {
 }
 
 .pin1 {
-    height: 10%;
-    width: 6%;
-    position: relative;
-    right: 190%;
-    bottom: 70%;
-    
+    height: 5%;
+    width: 1.5%;
+    position: fixed;
+    left: 25%;
+    bottom: 47%;
 }
 
 .pin2 {
-    height: 10%;
-    width: 6%;
-    position: relative;
-    right: 173%;
-    bottom: 35%;
+    height: 5%;
+    width: 1.5%;
+    position: fixed;
+    left: 31.5%;
+    bottom: 27%
 }
 
 .pin3 {
-    height: 10%;
-    width: 6%;
-    position: relative;
-    right: 166%;
-    bottom: 105%;
+    height: 5%;
+    width: 1.5%;
+    position: fixed;
+    left: 36.5%;
+    top: 33%;
 }
 
 .pin4 {
     height: 5%;
     width: 1.5%;
-    position: relative;
-    left: 46.2%;
-    bottom: 16%;
+    position: fixed;
+    left: 49.2%;
+    bottom: 17%;
 }
 
 .pin5 {
     height: 5%;
     width: 1.5%;
-    position: relative;
-    right: 48%;
+    position: fixed;
+    right: 45%;
     top: 46%;
 }
 
 .pin6 {
     height: 5%;
     width: 1.5%;
-    position: relative;
+    position: fixed;
+    right: 39%;
+    top: 36%;
 }
