--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,8 +24,8 @@
     margin: .5rem;
   }
   .title a{
-    text-deblackion: none;
-    color: white;
+    text-decoration: none;
+    color: black;
   }
   .navbar-links ul{
     margin: 0;
@@ -38,8 +38,8 @@
     list-style: none;
   }
   .navbar-links li a{
-    text-deblackion: none;
-    color: white;
+    text-decoration: none;
+    color: black;
     padding: 1rem;
     display: block;
   }
