--- a/styles/subscribe.css
+++ b/styles/subscribe.css
@@ -1,89 +1,160 @@
 *{
-    margin: 0px;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins","sans-serif";
-    background-color: #98717F;
-    overflow-y: hidden;
-  }
-  body{
-    margin: 0;
-    padding: 0;
-  }
-  .navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .title{
-    font-size: 1.5rem;
-    padding-left: 100px;
-    margin: .5rem;
-  }
-  .title a{
-    text-decoration: none;
-    color: black;
-  }
-  .navbar-links ul{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    padding-right: 50px;
-    cursor: pointer;
-  }
-  .navbar-links li{
-    list-style: none;
-  }
-  .navbar-links li a{
-    text-decoration: none;
-    color: black;
-    padding: 1rem;
-    display: block;
-  }
-  .navbar-links li:hover{
-    background-color: #a5003c;
-    border-bottom: 3px solid black;
-    transition: all .3s ease;
-  }
-  .toggle-button{
-    position: absolute;
-    top: .75rem;
-    right: 1rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
-  }
-  .toggle-button .bar{
-    height: 3px;
-    width: 100%;
-    background-color: white;
-    border-radius: 10px;
-  }
-  @media(max-width: 800px){
-    .toggle-button{
-        display: flex;
-    }
-    .navbar-links{
-        display: none;
-        width: 100%;
-    }
-    .navbar{
-        flex-direction: column;
-        align-items:flex-start;
-    }
-    .navbar-links ul{
-        width: 100%;
-        flex-direction: column;
-    }
-    .navbar-links li{
-        text-align: center;
-    }
-    .navbar-links li a{
-        padding: .7rem 3rem;
-    }
-    .navbar-links.active{
-        display: flex;
-    }
-  }
+  margin: 0px;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins","sans-serif";
+  background-color: #98717F;
+  overflow-y: hidden;
+}
+nav{
+  margin: 0;
+  padding: 0;
+}
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.title{
+  font-size: 1.5rem;
+  padding-left: 100px;
+  margin: .5rem;
+}
+.title a{
+  text-decoration: none;
+  color: black;
+}
+.navbar-links ul{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  padding-right: 50px;
+  cursor: pointer;
+}
+.navbar-links li{
+  list-style: none;
+}
+.navbar-links li a{
+  text-decoration: none;
+  color: black;
+  padding: 1rem;
+  display: block;
+}
+.navbar-links li:hover{
+  background-color: #a5003c;
+  border-bottom: 3px solid black;
+  transition: all .3s ease;
+}
+.toggle-button{
+  position: absolute;
+  top: .75rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+.toggle-button .bar{
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+}
+@media(max-width: 800px){
+.toggle-button{
+   display: flex;
+}
+.navbar-links{
+  display: none;
+  width: 100%;
+}
+.navbar{
+  flex-direction: column;
+  align-items:flex-start;
+}
+.navbar-links ul{
+  width: 100%;
+  flex-direction: column;
+}
+.navbar-links li{
+  text-align: center;
+}
+.navbar-links li a{
+  padding: .7rem 3rem;
+}
+.navbar-links.active{
+ display: flex;
+}
+}
+body{
+display:flexbox;
+justify-content: center; 
+align-items: center;
+min-height: 100vh;
+background:#98717F;
+}
+.container{
+margin-top: 100px;
+width: 75%;
+margin: auto;
+display:flex;
+max-width: 1000px;
+max-height: 500px;
+overflow-y: hidden;
+border-radius: 15px;
+box-shadow: 0 10px 15px;
+}
+.login{
+width: 500px;
+}
+form{
+width: 250px;
+margin: 60px auto;
+}
+h2{
+margin: 10px;
+text-align: center;
+font-weight: bolder;
+text-transform: uppercase;
+}
+hr{
+border-top: 1px solid orangered ;
+}
+form label{
+display: block;
+font-size: 16px;
+font-weight: 600;
+padding: 5px;
+}
+button{
+border: none;
+outline: none;
+padding: 8px;
+width: 250px;
+color: white;
+font-size: 16px;
+cursor: pointer;
+border-radius: 5px;
+background: #a5003c;
+margin-top: 20px;
+}
+input{
+margin: 2px;
+border: none;
+outline: none;
+padding: 8px;
+border-radius: 5px;
+border: 1px solid black;
+}
+@media(max-width:1000px){
+.container{
+  width: 100%;
+  max-width: 750px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+form{
+  width: 300px;
+}
+}
