--- a/styles/topsStyles.css
+++ b/styles/topsStyles.css
@@ -66,34 +66,7 @@
     background-color: white;
     border-radius: 10px;
   }
-  @media(max-width: 800px){
-    .toggle-button{
-        display: flex;
-    }
-    .navbar-links{
-        display: none;
-        width: 100%;
-    }
-    .navbar{
-        flex-direction: column;
-        align-items:flex-start;
-    }
-    .navbar-links ul{
-        width: 100%;
-        flex-direction: column;
-    }
-    .navbar-links li{
-        text-align: center;
-    }
-    .navbar-links li a{
-        padding: .7rem 3rem;
-    }
-    .navbar-links.active{
-        display: flex;
-    }
-  }
-
-.banner {
+  .banner {
     background-image: url(../images/Banner.webp);
     height: 40vh;
     width: 100%;
@@ -246,3 +219,39 @@
     opacity: 100%;
     transition: 0.6s;
 }
+@media(max-width: 800px){
+    .toggle-button{
+        display: flex;
+    }
+    .navbar-links{
+        display: none;
+        width: 100%;
+    }
+    .navbar{
+        flex-direction: column;
+        align-items:flex-start;
+    }
+    .navbar-links ul{
+        width: 100%;
+        flex-direction: column;
+    }
+    .navbar-links li{
+        text-align: center;
+    }
+    .navbar-links li a{
+        padding: .7rem 3rem;
+    }
+    .navbar-links.active{
+        display: flex;
+    }
+    .clothestxt {
+        font-size: 15px;
+        bottom: 10%;
+    }
+    
+    .clothesprice {
+        bottom: 15%;
+        font-size: 10px;
+    }
+}
+
