--- a/styles/subscribe.css
+++ b/styles/subscribe.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   font-family: "Poppins","sans-serif";
   background-color: #98717F;
-  overflow-y: hidden;
 }
 nav{
   margin: 0;
@@ -61,32 +60,6 @@ nav{
   background-color: white;
   border-radius: 10px;
 }
-@media(max-width: 800px){
-.toggle-button{
-   display: flex;
-}
-.navbar-links{
-  display: none;
-  width: 100%;
-}
-.navbar{
-  flex-direction: column;
-  align-items:flex-start;
-}
-.navbar-links ul{
-  width: 100%;
-  flex-direction: column;
-}
-.navbar-links li{
-  text-align: center;
-}
-.navbar-links li a{
-  padding: .7rem 3rem;
-}
-.navbar-links.active{
- display: flex;
-}
-}
 body{
 display:flexbox;
 justify-content: center; 
@@ -94,16 +67,16 @@ align-items: center;
 min-height: 100vh;
 background:#98717F;
 }
-.container{
-margin-top: 100px;
-width: 75%;
-margin: auto;
-display:flex;
-max-width: 1000px;
-max-height: 500px;
-overflow-y: hidden;
-border-radius: 15px;
-box-shadow: 0 10px 15px;
+.container {
+  margin-top: 300px;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  max-width: 1000px;
+  max-height: 500px;
+  overflow-y: hidden;
+  border-radius: 15px;
+  box-shadow: 0 10px 15px;
 }
 .login{
 width: 500px;
@@ -147,14 +120,57 @@ padding: 8px;
 border-radius: 5px;
 border: 1px solid black;
 }
-@media(max-width:1000px){
-.container{
-  width: 100%;
-  max-width: 750px;
-  margin-left: 20px;
-  margin-right: 20px;
-}
-form{
-  width: 300px;
-}
+
+@media(max-width: 800px){
+  .toggle-button{
+      display: flex;
+  }
+  .navbar-links{
+      display: none;
+      width: 100%;
+  }
+  .navbar{
+      flex-direction: column;
+      align-items:flex-start;
+      position: relative;
+  }
+  .navbar-links ul{
+      width: 100%;
+      flex-direction: column;
+  }
+  .navbar-links li{
+      text-align: center;
+  }
+  .navbar-links li a{
+      padding: .7rem 3rem;
+  }
+  .navbar-links.active{
+      display: flex;
+  }
+  h1 {
+    font-size: 20px;
+    margin-top: 0px;
+  }
+  .container{
+    width: 100%;
+    max-width: 750px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .right img{
+    width: 100%;
+    height: 100%;
+  }
+  form{
+    width: 100%;
+    margin: 20px auto;
+  }
+
+  .login{
+    width: 400px;
+    padding: 20px;
+  }
+  button{
+    width: 100%;
+  }
 }
