--- a/styles/topsStyles.css
+++ b/styles/topsStyles.css
@@ -230,6 +230,7 @@
     .navbar{
         flex-direction: column;
         align-items:flex-start;
+        position: relative;
     }
     .navbar-links ul{
         width: 100%;
@@ -248,7 +249,6 @@
         font-size: 15px;
         bottom: 10%;
     }
-    
     .clothesprice {
         bottom: 15%;
         font-size: 10px;
